--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -3,9 +3,13 @@ chardet==3.0.4
 Django==2.2.1
 future==0.17.1
 idna==2.8
+numpy==1.16.3
+pandas==0.24.2
 psycopg2==2.8.2
+python-dateutil==2.8.0
 pytz==2019.1
 requests==2.22.0
+six==1.12.0
 sodapy==1.5.2
 sqlparse==0.3.0
 Unipath==1.1
